# kaho

./: .clang-format  .gitignore  CMakeLists.txt  TODO.md
.buildkite/: mac_superbuild.yml  pipeline.yml
art/: icon_choices.afdesign~lock~  index.html
art/affinity/: mac_installer_background.afdesign
art/icons/: 01_girl_talking_to_robot_affinity.afphoto  01_girl_talking_to_robot_affinity.afphoto~lock~  01_girl_talking_to_robot_affinity.icns  gimp_icon.icns  gimp_icon.xcf  logo.afphoto  logo.icns  orange_icon_1.afphoto  orange_icon_2.afphoto  orange_icon_3.afphoto  orange_icon_3.icns  orange_icon_4.afphoto  orange_icon_4.afphoto~lock~  orange_icon_4.icns
art/icons/wip/: 01_girl_talking_to_robot.xcf
art/logo_choices/: opdroid1234_dieter_rams_inspired_bright_yin_and_yang_logo_where_fabb7091-ada2-42d3-9654-ab096a3d4aa4.icns
art/mac_installer/: background.tiff  background.xcf  mac_installer_background.afdesign
cmake/: Dependencies.cmake  FindCmark.cmake  FindQLiteHtml.cmake  FindSparkle.cmake  Findqmarkdowntextedit.cmake
cmake/mac/: Info.plist
include/kaho/: aimodel.h  chatview.h  downloader.h  errors.h  file_utils.h  localmodelregistry.h  main.h  mainwindow.h  noneditablestringlistmodel.h  promptedit.h  server.h  updater.h
oss/: CMakeLists.txt
src/: aimodel.cpp  chatview.cpp  downloader.cpp  embed.cpp  errors.cpp  file_utils.cpp  linux_auto_updater.cpp  localmodelregistry.cpp  main.cpp  main.enaml  main.py  mainwindow.cpp  noneditablestringlistmodel.cpp  promptedit.cpp  public_main.cpp  server.cpp  sparkle_auto_updater.mm  stash.cpp  test.md  winsparkle_auto_updater.cpp
src/python/kaho/: .cruft.json  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
src/python/kaho/.github/workflows/: test.yml
src/python/kaho/docs/contributing/: 1.-contributing-guide.md  4.-acknowledgements.md
src/python/kaho/kaho/: __init__.py  app.py  main.py  rag.py  rag_llindex.py
src/python/kaho/scripts/: clean.sh  lint.sh  test.sh
superbuild/: CMakeLists.txt
superbuild/cmake/: external_cmark_gfm.cmake  external_litehtml.cmake  external_llama.cmake  external_python.cmake  external_qlitehtml.cmake  external_qmarkdowntextedit.cmake  external_qt.cmake  external_qt_docking_framework.cmake  external_sparkle.cmake  ram_capacity.cmake
superbuild/patches/qmarkdowntextedit/: CMakeLists.txt
terraform/: provider.tf
terraform/gcp/: accounts.tf  state.tf
web/: index.html.in  wrangler.toml
